--- a/views/bde/dashboard.ejs
+++ b/views/bde/dashboard.ejs
@@ -88,6 +88,8 @@
                                                 <span class="theme-transport text-xs px-3 py-1 rounded-full font-medium">Transport</span>
                                             <% } else if (allo.theme === 'Allo Fun') { %>
                                                 <span class="theme-fun text-xs px-3 py-1 rounded-full font-medium">Fun</span>
+                                            <% } else if (allo.theme === 'Allo Démoniaque') { %>
+                                                <span class="theme-demoniaque text-xs px-3 py-1 rounded-full font-medium">Démoniaque</span>
                                             <% } else { %>
                                                 <span class="theme-autres text-xs px-3 py-1 rounded-full font-medium">Autres</span>
                                             <% } %>
@@ -167,6 +169,8 @@
                                                 <span class="theme-transport text-xs px-3 py-1 rounded-full font-medium">Transport</span>
                                             <% } else if (allo.theme === 'Allo Fun') { %>
                                                 <span class="theme-fun text-xs px-3 py-1 rounded-full font-medium">Fun</span>
+                                            <% } else if (allo.theme === 'Allo Démoniaque') { %>
+                                                <span class="theme-demoniaque text-xs px-3 py-1 rounded-full font-medium">Démoniaque</span>
                                             <% } else { %>
                                                 <span class="theme-autres text-xs px-3 py-1 rounded-full font-medium">Autres</span>
                                             <% } %>
