Add other building option and new building choices

--- a/views/bde/allo-detail.ejs
+++ b/views/bde/allo-detail.ejs
@@ -216,6 +216,9 @@
                                 <option value="Meridienne">Meridienne</option>
                                 <option value="Centre Vie">Centre Vie</option>
                                 <option value="KerStudy">KerStudy</option>
+                                <option value="Local BDS">Local BDS</option>
+                                <option value="Local BDE">Local BDE</option>
+                                <option value="Autre">Autre</option>
                             </select>
                         </div>
                         <div>
